--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -39,7 +39,7 @@ h2 {
   margin: 0;
   letter-spacing: -1px;
   text-transform: uppercase;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
 }
 h3 {
   font-size: 1.375rem;
@@ -372,7 +372,7 @@ nav {
 @media (min-width: 992px) {
   p {
     font-size: 1rem;
-    max-width: 700px;
+    max-width: 900px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -392,10 +392,14 @@ nav {
   .main-nav.active {
     background-color: transparent;
   }
-  .login-link a{
+  .login-link a {
     padding: 10px 18px;
     border-radius: 10px;
     background-color: #72bbc4;
+    transition: all 0.2s ease;
+  }
+  .login-link a:hover {
+    background-color: #67a8b0;
   }
   .wrapper {
     background-size: 45%;
@@ -421,15 +425,23 @@ nav {
   .footer-links {
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
     padding-top: 60px;
+  }
+  .footer-nav-wrapper {
+    flex: 2;
+  }
+  .footer-social {
+    padding-top: 0;
+    flex: 1;
   }
   .footer-nav {
     padding-top: 0;
-    padding-bottom: 60px;
+    padding-bottom: 40px;
     justify-content: flex-start;
   }
   .footer-info {
+    flex: 1;
     gap: 70px;
     align-self: center;
     text-align: left;
