--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -229,6 +229,8 @@ nav {
   text-align: center;
   align-items: center;
   line-height: 1.7;
+  flex-direction: column;
+  margin-top: 40px;
 }
 .footer-logo {
   padding-bottom: 50px;
@@ -428,8 +430,9 @@ nav {
     align-items: flex-start;
     padding-top: 60px;
   }
+
   .footer-nav-wrapper {
-    flex: 2;
+    flex: 1;
   }
   .footer-social {
     padding-top: 0;
@@ -444,8 +447,11 @@ nav {
     flex: 1;
     gap: 70px;
     align-self: center;
+    align-items: flex-start;
     text-align: left;
     padding-bottom: 20px;
+    flex-direction: row;
+    margin-top: 0;
   }
   .footer-logo {
     padding-top: 18px;
